--- a/libft/Makefile
+++ b/libft/Makefile
@@ -19,15 +19,12 @@ SRC = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c \
 	ft_strncmp.c ft_memchr.c ft_memcmp.c ft_strnstr.c ft_atoi.c ft_calloc.c \
 	ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c \
 	ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c \
-	ft_putendl_fd.c ft_putnbr_fd.c
+	ft_putendl_fd.c ft_putnbr_fd.c ft_lstnew_bonus.c ft_lstadd_front_bonus.c \
+	ft_lstsize_bonus.c ft_lstlast_bonus.c ft_lstadd_back_bonus.c \
+	ft_lstdelone_bonus.c ft_lstclear_bonus.c ft_lstmap_bonus.c \
+	ft_lstiter_bonus.c ft_strcmp.c
 
 OBJ = $(SRC:.c=.o) 
-
-SRCBONUS = ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c \
-	ft_lstlast_bonus.c ft_lstadd_back_bonus.c ft_lstdelone_bonus.c \
-	ft_lstclear_bonus.c ft_lstmap_bonus.c ft_lstiter_bonus.c
-
-OBJBONUS = $(SRCBONUS:.c=.o) 
 
 all : $(NAME)
 
@@ -37,11 +34,9 @@ $(NAME) : $(OBJ)
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
-bonus : $(OBJBONUS)
-	ar rcs $(NAME) $(OBJBONUS)
 
 clean : 
-	rm -f $(OBJ) $(OBJBONUS)
+	rm -f $(OBJ)
 
 fclean : clean
 	rm -f $(NAME)
